@@ -15,6 +15,7 @@
 #include "exts/String/cu_stringmap.h"
 #include "exts/String/cu_stringbasics.h"
 #include "exts/System/cu_info.h"
+#include "exts/Byte/cu_bytebasics.h"
 
 // function by tgamblin
 // https://stackoverflow.com/questions/77005/how-to-generate-a-stacktrace-when-my-gcc-c-app-crashes
@@ -45,6 +46,7 @@ int main() {
 	Cu::StringLib::Map::addToEngine(engine);
 	Cu::StringLib::Basics::addFunctionsToEngine(engine);
 	Cu::System::addFunctionsToEngine(engine);
+	Cu::ByteLib::Basics::addFunctionsToEngine(engine);
 
 	signal(SIGSEGV, handler);
 	std::setbuf(stdout,0);
