@@ -2,6 +2,7 @@
 v 6-0.641
 
 - Added String::fromInt() and String::fromDouble().
+- Changed CU_STACK_FRAME_SCOPE_SIZE from 100 to 50.
 
 
 ===================
